--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "abc" "\0"
+            VALUE "FileDescription", "hotpot" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "abc" "\0"
+            VALUE "InternalName", "hotpot" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2025 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "abc.exe" "\0"
-            VALUE "ProductName", "abc" "\0"
+            VALUE "OriginalFilename", "hotpot.exe" "\0"
+            VALUE "ProductName", "hotpot" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
